kubernetes/catalog/vaultwarden/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app.kubernetes.io/name: vaultwarden
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.int.${BASE_DOMAIN}`) && PathPrefix(`/notifications/hub`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - name: vaultwarden
          port: 3012
    - match: Host(`vaultwarden.int.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - name: vaultwarden
          port: 80
  tls:
    store:
      name: default
      namespace: traefik
